Fix 1px alignment of Files icon in taskmenu popup

--- a/skins/chameleon/styles.less
+++ b/skins/chameleon/styles.less
@@ -295,7 +295,7 @@ body.login #header {
 
 .ktaskmenu .activetask.files,
 .ktaskmenu .button-files .button-inner {
-	background-position: -4px -2767px;
+	background-position: -5px -2767px;
 }
 
 .ktaskmenu .button-logout .button-inner {
